=> Recommended SDK version: 1.12.4 <=
=> Minimum SDK version: 1.11.3 <=

* New configuration "ExtraPermissions" to ADD new permissions to
  the default "Permissions" entries.
* Improved handling of "Anonymous" user profiles (when no auth-tokens
  are provided):  The plugin will now request the auth-service to
  get an anonymous user profile even if there are no auth-tokens in the
  HTTP request.


2025-06-11 - v 0.9.3
====================

=> Minimum Orthanc version: 1.11.3 <=
=> Recommended SDK version: 1.12.4 <=
=> Minimum SDK version: 1.11.3 <=

* New default permissions to Q&R remote modalities
* The /tokens/decode route now returns 2 additionnal fields:
  "ResourcesDicomIds" and "ResourcesOrthancIds".
  This will only work if the authorization service returns a "resources" field to the /tokens/decode route.
* Maintenance: Use Orthanc SDK 1.12.4 by default to benefit from more detailed logging.
* Fix default permission for /dicom-web/servers/../stow
* When calling /dicom-web/studies with a resource token when no StudyInstanceUID 
  is specified in the query args, the plugin now adds a filter on StudyInstanceUID=X|Y where
  X & Y are the StudyInstanceUIDs of the resource token.  
  This will only work if the authorization service returns a "resources" field to the /tokens/decode route.  
  This notably prevents OHIF to display errors when requesting 
  prior studies while still preserving the security since only the authorized resources are returned.


2025-04-29 - v 0.9.2
====================

* When calling /dicom-web/studies with a resource token when no StudyInstanceUID 
  is specified in the query args, the plugin now returns an empty list of resources
  instead of returning a 403.  This notably prevents OHIF to display errors when requesting 
  prior studies while still preserving the security since no resources are returned.
* Added support for /dicom-web/studies/../thumbnail.


2025-04-01 - v 0.9.1
====================
